asset/main.css
@import url(https://fonts.googleapis.com/css?family=Varela+Round);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
*, *::after, *::before {
  box-sizing: border-box;
}

html, body {
  height: 100%;
}

body {
  margin-top: 0;
  font-family: 'Varela Round';
  font-size: 16px;
  line-height: 1.5em;
}

a {
  color: #66cc99;
  text-decoration: none;
}

.clearfix::after, .clearfix::before {
  content: " ";
  display: table;
}

.clearfix::after {
  clear: both;
}

.bold {
  color: #4a4e51;
  font-weight: 400;
}

.resume-wrapper {
  position: relative;
  text-align: center;
  height: 100%;
}

.profile {
  background: #fff;
  width: 30%;
  float: left;
  color: #9099a0;
}
@media (max-width: 850px) {
  .profile {
    width: 100%;
  }
}
.profile .name-wrapper {
  float: left;
  width: 60%;
}
.profile h1 {
  font-size: 2.5em;
  font-family: "Varela Round", sans-serif;
  color: #4a4e51;
  text-transform: uppercase;
  line-height: 1em;
  padding-top: 50px;
  padding-left: 75px;
}
@media (max-width: 1200px) {
  .profile h1 {
    padding-top: 50px;
  }
}
@media (max-width: 450px) {
  .profile h1 {
    font-size: 1.8em;
    padding-top: 50px;
    padding-left: 75px;
  }
}
.experience-wrapper hr{
    margin-top: 50px;
    margin-bottom: 50px;
}
.profile li {
  margin-bottom: 10px;
}
.profile .picture-resume-wrapper {
  width: 40%;
  display: block;
  float: left;
}
.profile .picture-resume {
  width: 220px;
  height: 220px;
  background-size: cover;
  border-radius: 50%;
  margin-right: 0px;
  display: table;
  position: relative;
  vertical-align: middle;
}
.profile .picture-resume span {
  display: table-cell;
  vertical-align: middle;
  position: relative;
  margin: 0 auto;
  z-index: 10;
  text-align: center;
}
.profile .picture-resume img {
  border-radius: 10%;
  width: 150px;
}
@media (max-width: 1500px) {
  .profile .picture-resume img {
    width: 80px;
  }
}
@media (max-width: 1200px) {
  .profile .picture-resume img {
    width: 120px;
    height: 120px;
  }
}
@media (max-width: 1500px) {
  .profile .picture-resume {
    width: 150px;
    height: 150px;
  }
}
@media (max-width: 1200px) {
  .profile .picture-resume {
    width: 200px;
    height: 200px;
  }
}
@media (max-width: 450px) {
  .profile .picture-resume {
    width: 180px;
    height: 180px;
  }
}
.profile .contact-info {
  margin-top: 100px;
  font-weight: 300;
}
@media (max-width: 1200px) {
  .profile .contact-info {
    margin-top: 70px;
  }
}
@media (max-width: 450px) {
  .profile .contact-info {
    margin-top: 50px;
  }
}
.profile .list-titles {
  float: left;
  text-align: left;
  font-weight: 600;
  width: 40%;
  color: #4a4e51;
}
.profile .list-content {
  float: left;
  width: 60%;
  text-align: left;
  font-weight: 300;
}
.profile .list-content ul {
  margin-bottom: 10px;
  padding: 0
}
.profile .contact-presentation {
  text-align: left;
  font-weight: 300;
  margin-bottom: 30px;
}
.profile .contact-presentation p {
  text-align: justify;
}
@media (max-width: 1200px) {
  .profile .contact-presentation {
    margin-top: 70px;
    margin-bottom: 70px;
  }
}
@media (max-width: 850px) {
  .profile .contact-presentation {
    margin-top: 50px;
    margin-bottom: 50px;
  }
}
.profile svg {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.profile .st0, .profile .st1 {
  fill: #66cc99;
}

.experience {
  background: #1f1f22;
  width: 70%;
  float: left;
  position: relative;
  color: #9099a0;
  font-weight: 300;
  min-height: 100%;
  min-height: 100vh;
}
@media (max-width: 850px) {
  .experience {
    width: 100%;
  }
}
.experience h3.experience-title {
  color: #66cc99;
  text-align: left;
  text-transform: uppercase;
  font-size: 1.2em;
  margin-bottom: 20px;
  font-weight: 400;
}
.experience .company-wrapper {
  width: 30%;
  float: left;
  text-align: left;
  padding-right: 5%;
  margin-bottom: 60px;
}
.experience .company-wrapper .company-logo{
  width: 50%;
}
@media (max-width: 450px) {
  .experience .company-wrapper {
    width: 100%;
    margin-bottom: 20px;
  }
}
.experience .job-wrapper {
  width: 70%;
  float: left;
  text-align: left;
  padding-right: 5%;
}
.experience .job-wrapper .company-description p b {
    color: lightgray
}
.experience .job-wrapper .company-description p{
    text-align: justify;
}
@media (max-width: 450px) {
  .experience .job-wrapper {
    width: 100%;
    margin-bottom: 40px;
  }
}
.experience .experience-title {
  color: white;
  margin-bottom: 15px;
}

.section-padding {
  padding: 60px 60px 40px 40px;
}
@media (max-width: 850px) {
  .section-padding {
    padding: 80px 15% 40px 10%;
  }
}
@media (max-width: 450px) {
  .section-padding {
    padding: 40px 10% 20px 5%;
  }
}

.section-wrapper {
  float: left;
  text-align: left;
  color: #9099a0;
  font-weight: 300;
  margin-bottom: 20px;
}
@media (max-width: 450px) {
  .section-wrapper {
    width: 100%;
  }
}
.section-wrapper h3.section-title {
  color: #66cc99;
  text-align: left;
  text-transform: uppercase;
  font-size: 1.2em;
  margin-bottom: 20px;
  font-weight: 400;
}

.skill-section .heading{
    color: darkcyan;
    margin-left: 25px;
}
.skill-section .tech-container {
    display: grid;
    grid-template-columns: auto auto auto auto auto auto;
    padding: 10px;
}

.skill-section .tech-container img {
    width: 50px;
    height: 40px;
}
.skill-section .tech-container label{
    font-style: italic;
    font-size: 12px;
}
.skill-section .tech-item {
  padding: 8px;
  text-align: center;
}

